js/js.translator/testData/incremental/invalidation/jsModuleAnnotationOnObjectWithUsage/main/m.kt
@OptIn(kotlin.ExperimentalStdlibApi::class)
@EagerInitialization
val initJsObject = js("""
   globalThis.ObjectB = { getResult: function() { return "OK" } }
""")

fun box(stepId: Int): String {
    return ObjectB.getResult()
}